--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,35 @@
+#
+##serverPort details#
+#server.port=9002
+#
+#
+#
+##database#
+#spring.datasource.url= jdbc:mysql://localhost:3306/users
+#spring.datasource.username= root
+#spring.datasource.password= Surya@5454
+#
+#
+#
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+#
+#
+#spring.jpa.show-sql=true
+## Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto= update
+#
+#
+#
+#spring.mvc.pathmatch.matching-strategy: ant_path_matcher
+#
+#eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka
 
-#serverPort details#
-server.port=8081
 
 
+spring.application.name =DEPARTMENT-SERVICE
 
-#database#
-spring.datasource.url= jdbc:mysql://localhost:3306/users
-spring.datasource.username= root
-spring.datasource.password= Surya@5454
-
-
-
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
-
-
-spring.jpa.show-sql=true
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
-
-
-
-spring.mvc.pathmatch.matching-strategy: ant_path_matcher
-
-
+spring.config.import=optional:configserver:http://localhost:8888
+#eureka.renewalPercentThreshold=0.85
 
 
 
